--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -11,30 +11,7 @@
     %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body
-    .navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
-      .container
-        .navbar-header
-          %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
-            %span.sr-only Toggle navigation
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.navbar-brand{:href => "#"}
-            %b FLOCKERS
-        .navbar-collapse.collapse
-          %ul.nav.navbar-nav
-            %li
-              %a{:href => "#" , :"data-bind" => "click : showMyEvents"}My Events
-            %li
-              %a{:href => "#",:"data-bind" => "click : showParticipationEvents"}Participated Events
-            %li
-              %input{:placeholder => 'Search by Event Name',:type =>"text",:"data-bind" => "value: event().ename"}
-            %li
-              %button.btn-primary{:"data-bind" => "click : searchEvent"}Search
-          %ul.nav.navbar-nav.navbar-right
-            %li
-              %button.btn.btn-danger{:"data-bind" => "click : signOut"} Sign Out
-
+    =haml_partial "topBar"
 
     .container
       .row
