--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,4 +1,4 @@
-.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
+.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
   .container
     .navbar-header
       %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
