--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,30 +1,37 @@
-.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
-  .container
-    .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.navbar-brand{:href => "#"}
-        %b FLOCKERS
-    .navbar-collapse.collapse
-      %ul.nav.navbar-nav
-        /%li
-        /  %a{:href => "#" , :"data-bind" => "click : showMyEvents"}My Events
-        /%li
-        /  %a{:href => "#",:"data-bind" => "click : showParticipationEvents"}Participated Events
-        /%li
-        /  .input-append
-        /    %input{:placeholder => 'Search by Event Name',:type =>"text",:"data-bind" => "value: event().ename"}
-        /    %button.btn.btn-primary{:"data-bind" => "click : searchEvent"}Search
-      %ul.nav.navbar-nav.navbar-right
-        %li
-          /=if loggedIn?
-          /%button.btn.btn-danger{:"data-bind" => "click : signOut"} Sign Out
-          /=else
-          %button.btn.btn-success{"data-target" => "#signInModal", "data-toggle" => "modal"} Sign In
-          %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
-          /=end
-
-
+%header
+  .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+    .navbar-inner
+      .container
+        %a.navbar-brand{:href => "/"}=SiteConfig.title
+        .navbar
+          %ul.nav.navbar-nav.pull-right
+            - unless @user.nil? or @user == ''
+              %li
+                %a{:href => '/loggedIn'}
+                  Create Flock
+              %li.dropdown
+                / This href is very important here, otherwise this does not work on iphone
+                %a.dropdown-toggle{:href => "#", :"data-toggle"=>'dropdown'}
+                  %span.glyphicon.glyphicon-search
+                  %b.caret
+                %ul.dropdown-menu
+                  %li
+                    %a
+                      Welcome!
+                      %p
+                        #{@user}
+                  %li.divider
+                  %li
+                    %a{:href => '/me'} Profile
+                  %li
+                    %a{:"data-bind" => "click: signOut"} Sign Out
+            - else
+              %li
+                %form.navbar-form.navbar-right{:role => "form"}
+                  .form-group
+                    %input.form-control{:style => "height:30px;",:"data-bind" => "value : uname", :placeholder => "Email address",:type => "text"}
+                  .form-group
+                    %input.form-control{:style => "height:30px;",:"data-bind" => "value : pas", :placeholder => "Password",:type => "password"}
+                  %button.btn.btn-success{:"data-bind" => "click: login"} Sign in
+                  %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
+  %div{:id => 'msg'}
