--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -11,9 +11,9 @@
     %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body
-    =haml_partial "topBar"
-
     .container
+      =haml_partial "topBar"
+
       .row
         .span4
           %input.hide{:id =>"current_user", :value => "#{@user}"}
@@ -24,7 +24,7 @@
       .row
         .span12
           .main
-            %a.wheel-button{:href => "#wheel"} I would you like to 
+            %a.wheel-button{:href => "#wheel"} I would love to
             .pointer
             %ul#wheel.wheel{:'data-bind' => 'foreach : category'}
               %li.item
@@ -50,37 +50,8 @@
             %h4{:'data-bind' => 'text : selectedActivity'}
           %div.panel-body{:"data-bind"=>"foreach:searchedEvents"}
 
-            .span3.panel.panel-info
-            
-              %div.panel-body
-              
-                %table{:border => "0"}
-                  %tr
-                    %th Name
-                    %td{:"data-bind" => "text : ename()"}
-                  %tr
-                    %th Date
-                    %td{:"data-bind" => "text : date()"}
-                  %tr
-                    %th Fees
-                    %td{:"data-bind" => "text : fees()"}
-                  %tr
-                    %th Prize
-                    %td{:"data-bind" => "text : prize()"}
-                  %tr
-                    %th Place
-                    %td{:"data-bind" => "text : place()"}
-                  %tr
-                    %th Time
-                    %td{:"data-bind" => "text : time()"}
-                  %tr
-                    %th Description
-                  
-                    %td{:"data-bind" => "text : ':  '+ description()"}
-                  %tr
-                    %th
-                    %td{:align => "right"}
-                      %button.btn.btn-primary{:'data-bind' =>'click : function() { $root.participate(id());}'}Participate
+            =haml_partial "eventCard"
+            %button.btn.btn-primary{:'data-bind' =>'click : function() { $root.participate(id());}'}Participate
               
       %div
         .row
