--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,37 +1,36 @@
-%header
-  .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
-    .navbar-inner
-      .container
-        %a.navbar-brand{:href => "/"}=SiteConfig.title
-        .navbar
-          %ul.nav.navbar-nav.pull-right
-            - unless @user.nil? or @user == ''
+%header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+  .container
+    .navbar-header
+      %a.navbar-brand{:href => "/"}=SiteConfig.title
+    .nav
+      %ul.nav.navbar-nav.navbar-right
+        - unless @user.nil? or @user == ''
+          %li
+            %a{:href => '/loggedIn'}
+              Create Flock
+          %li.dropdown
+            / This href is very important here, otherwise this does not work on iphone
+            %a.dropdown-toggle{:href => "#", :"data-toggle"=>'dropdown'}
+              %span.glyphicon.glyphicon-user
+              %b.caret
+            %ul.dropdown-menu
               %li
-                %a{:href => '/loggedIn'}
-                  Create Flock
-              %li.dropdown
-                / This href is very important here, otherwise this does not work on iphone
-                %a.dropdown-toggle{:href => "#", :"data-toggle"=>'dropdown'}
-                  %span.glyphicon.glyphicon-search
-                  %b.caret
-                %ul.dropdown-menu
-                  %li
-                    %a
-                      Welcome!
-                      %p
-                        #{@user}
-                  %li.divider
-                  %li
-                    %a{:href => '/me'} Profile
-                  %li
-                    %a{:"data-bind" => "click: signOut"} Sign Out
-            - else
+                %a
+                  Welcome!
+                  %p
+                    #{@user}
+              %li.divider
               %li
-                %form.navbar-form.navbar-right{:role => "form"}
-                  .form-group
-                    %input.form-control{:style => "height:30px;",:"data-bind" => "value : uname", :placeholder => "Email address",:type => "text"}
-                  .form-group
-                    %input.form-control{:style => "height:30px;",:"data-bind" => "value : pas", :placeholder => "Password",:type => "password"}
-                  %button.btn.btn-success{:"data-bind" => "click: login"} Sign in
-                  %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
-  %div{:id => 'msg'}
+                %a{:href => '/me'} Profile
+              %li
+                %a{:"data-bind" => "click: signOut"} Sign Out
+        - else
+          %li
+            %form.navbar-form.navbar-right{:role => "form"}
+              .form-group
+                %input.form-control{:style => "height:30px;",:"data-bind" => "value : uname", :placeholder => "Email address",:type => "text"}
+              .form-group
+                %input.form-control{:style => "height:30px;",:"data-bind" => "value : pas", :placeholder => "Password",:type => "password"}
+              %button.btn.btn-success{:"data-bind" => "click: login"} Sign in
+              %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
+%div{:id => 'msg'}
