--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -2,8 +2,9 @@
 %html{:lang => "en"}
   %head
     %title Event Planner
-    %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
+    %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/jumbotron.css", :rel => "stylesheet"}
+    %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body
     .container
       =haml_partial "topBar"
