--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -1,15 +1,14 @@
 !!!
 %html{:lang => "en"}
   %head
-    %title Event Planner
-    %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
-    /%link{:href => "../assets/css/bootstrap3.css", :rel => "stylesheet"}
+    %title Create Flock
+    %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/bootstrap-timepicker.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/datepicker.css", :rel => "stylesheet"}
-    %script{:src => "//code.jquery.com/jquery-1.10.2.min.js"}
-    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
-    %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
+
+    %script{:src => "//code.jquery.com/jquery-latest.min.js"}
+    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
   %body
     .container
       =haml_partial "topBar"
