wheelmenu bug-fixing

--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -9,6 +9,7 @@
 
     %script{:src => "//code.jquery.com/jquery-latest.min.js"}
     %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
+    %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
   %body
     .container
       =haml_partial "topBar"
