public events displayed and signout working

--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -76,3 +76,4 @@
     %script{:src => "../assets/js/jquery.min.js"}
     %script{:src => "../assets/js/bootstrap.min.js"}  
     %script{:src => "../assets/js/participate.js"} 
+    %script{:src => "../assets/js/profile.js"}
