--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -31,6 +31,6 @@
                 %input.form-control{:style => "height:30px;",:"data-bind" => "value : uname", :placeholder => "Email address",:type => "text"}
               .form-group
                 %input.form-control{:style => "height:30px;",:"data-bind" => "value : pas", :placeholder => "Password",:type => "password"}
-              %button.btn.btn-success{:"data-bind" => "click: login"} Sign in
+              %button.btn.btn-success{"data-target" => "#signInModal", "data-toggle" => "modal"} Sign in
               %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
 %div{:id => 'msg'}
