--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -8,8 +8,8 @@
     %link{:href => "../assets/css/datepicker.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
 
-    
     %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
+    /TODO: this line is disturbing the nav bar for some reason.
     %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
   %body
     .container
